syntax = "proto3";
package editor;

service Editor {
  rpc InitMessageStream(InitMessageStreamRequest) returns (stream InitMessageStreamResponse);
}

message InitMessageStreamRequest {}

enum MessageType {
  SelectionChanged = 0;
  ResourceChanged = 1;
}

message Message {
  MessageType msg_type = 1;
  string payload = 2;
}

message InitMessageStreamResponse {
  oneof response {
    Message message = 1;
    uint64 lagging = 2;
  }
}